build(cmake): fix many libraries building as shared instead of header only

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,28 +5,39 @@ project(ISBNScanner VERSION 0.1 LANGUAGES C CXX)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-add_executable(scanner src/main.cpp src/main.hpp)
+add_executable(scanner src/main.cpp src/main.hpp src/book.hpp)
 
-include(cmake/Findluajit.cmake)
-target_link_libraries(scanner PRIVATE ${LUAJIT_LIBRARY})
+#include(cmake/Findluajit.cmake)
+#target_link_libraries(scanner PRIVATE ${LUAJIT_LIBRARY})
 
 include(cmake/CPM.cmake)
 
-CPMAddPackage(NAME libassert GITHUB_REPOSITORY jeremy-rifkin/libassert GIT_TAG v1.1)
-target_link_libraries(scanner PRIVATE assert dl)
+target_link_libraries(scanner PRIVATE dl)
+CPMAddPackage(NAME libassert GITHUB_REPOSITORY jeremy-rifkin/libassert GIT_TAG v1.1 DOWNLOAD_ONLY YES)
+file(GLOB libassert_SOURCES ${libassert_SOURCE_DIR}/src/assert.cpp)
+add_library(libassert STATIC ${libassert_SOURCES})
+target_include_directories(libassert PRIVATE ${libassert_SOURCE_DIR}/include)
+target_include_directories(scanner PRIVATE ${libassert_SOURCE_DIR}/include)
+target_link_libraries(scanner PRIVATE libassert)
 
-CPMAddPackage("gh:fmtlib/fmt#9.1.0")
-CPMAddPackage(NAME spdlog GITHUB_REPOSITORY gabime/spdlog GIT_TAG v1.11.0 OPTIONS "SPDLOG_FMT_EXTERNAL 1")
+CPMAddPackage(NAME fmt GITHUB_REPOSITORY fmtlib/fmt GIT_TAG 9.1.0)
+target_link_libraries(scanner PRIVATE fmt::fmt-header-only)
+CPMAddPackage(NAME spdlog GITHUB_REPOSITORY gabime/spdlog GIT_TAG v1.11.0 OPTIONS "SPDLOG_FMT_EXTERNAL_HO ON")
 target_link_libraries(scanner PRIVATE spdlog::spdlog_header_only)
 
-CPMAddPackage(NAME sol2 GITHUB_REPOSITORY ThePhD/sol2 GIT_TAG v3.3.0 DOWNLOAD_ONLY YES)
-add_library(sol2 INTERFACE IMPORTED)
-target_include_directories(sol2 INTERFACE ${sol2_SOURCE_DIR}/include ${LUAJIT_INCLUDE_DIR})
-target_link_libraries(sol2 INTERFACE ${LUAJIT_LIBRARY})
-target_link_libraries(scanner PRIVATE sol2)
+#CPMAddPackage(NAME sol2 GITHUB_REPOSITORY ThePhD/sol2 GIT_TAG v3.3.0 DOWNLOAD_ONLY YES)
+#add_library(sol2 INTERFACE IMPORTED)
+#target_include_directories(sol2 INTERFACE ${sol2_SOURCE_DIR}/include ${LUAJIT_INCLUDE_DIR})
+#target_link_libraries(sol2 INTERFACE ${LUAJIT_LIBRARY})
+#target_link_libraries(scanner PRIVATE sol2)
 
-CPMAddPackage("gh:libcpr/cpr#1.10.0")
-target_link_libraries(scanner PRIVATE cpr)
+#CPMAddPackage("gh:libcpr/cpr#1.10.0")
+#target_link_libraries(scanner PRIVATE cpr::cpr)
+
+CPMAddPackage(NAME httplib GITHUB_REPOSITORY yhirose/cpp-httplib GIT_TAG v0.11.4 DOWNLOAD_ONLY YES)
+add_library(httplib INTERFACE IMPORTED)
+target_include_directories(httplib INTERFACE ${httplib_SOURCE_DIR})
+target_link_libraries(scanner PRIVATE httplib)
 
 CPMAddPackage(NAME taocpptuple GITHUB_REPOSITORY taocpp/tuple GIT_TAG 1.0.0 DOWNLOAD_ONLY YES)
 add_library(taocpptuple INTERFACE IMPORTED)
